# ydownloader

./: README.md  pyproject.toml  requirements.txt
specs/001-media-downloader/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-media-downloader/checklists/: requirements.md
specs/001-media-downloader/contracts/: interfaces.md
src/: __init__.py  __main__.py  app.py
src/domain/: __init__.py  download_service.py  errors.py  models.py  validators.py
src/infra/: __init__.py  config_store.py  file_system.py  history_store.py  platform.py  ytdlp_adapter.py
src/ui/: __init__.py  main_window.py
src/ui/dialogs/: __init__.py  about_dialog.py  error_dialog.py
src/ui/widgets/: __init__.py  download_button.py  folder_picker.py  format_selector.py  history_panel.py  progress_bar.py  url_input.py
tests/: __init__.py  conftest.py
tests/unit/: test_download_service.py  test_models.py  test_validators.py
